--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
           command: unzip tflint_linux_amd64.zip
       - run:
           name: Lint the terraform code
-          command: ./tflint *.tf
+          command: ./tflint --deep --aws-region eu-west-2 *.tf
       - run:
           name: Download terraform
           command: wget https://releases.hashicorp.com/terraform/0.11.7/terraform_0.11.7_linux_amd64.zip
