--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,16 +13,10 @@ jobs:
           command: unzip tflint_linux_amd64.zip
       - run:
           name: Lint the terraform code
-          command: ./tflint --deep --aws-region eu-west-2 *.tf
-      - run:
-          name: Download terraform
-          command: wget https://releases.hashicorp.com/terraform/0.11.7/terraform_0.11.7_linux_amd64.zip
-      - run:
-          name: Unzip terraform
-          command: unzip terraform_0.11.7_linux_amd64.zip
+          command: ./tflint --deep --aws-region eu-west-2
       - run:
           name: Run terraform init
-          command: ./terraform init -input=false
+          command: terraform init -input=false
       - run:
           name: Run terraform plan
-          command: ./terraform plan -out=tfplan -input=false
+          command: terraform plan -out=tfplan -input=false
