--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
             unzip tflint_linux_amd64.zip
       - persist_to_workspace:
           root: .
-          path: .
+          path: *
   test:
     docker:
       - image: hashicorp/terraform:light
