--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,8 +14,9 @@ jobs:
             wget https://github.com/wata727/tflint/releases/download/v0.5.4/tflint_linux_amd64.zip
             unzip tflint_linux_amd64.zip
       - persist_to_workspace:
-          root: ~/worstpaladin.eu
-          path: *
+          root: .
+          path:
+            - *
   test:
     docker:
       - image: hashicorp/terraform:light
