--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,3 +19,8 @@ jobs:
       - run:
           name: Run terraform plan
           command: terraform plan -out=tfplan -input=false
+workflows:
+  version: 2
+  build_and_test:
+    jobs:
+      - build
